Fixed scroller to not overflow call stack when invisible.

--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -108,10 +108,11 @@
       height: 24px
       overflow: hidden
       .text
+         position: absolute;
+         left: 10px
          font-size: .75em
          text-transform: uppercase
          line-height: 24px
-         position: absolute;
          white-space: nowrap
    .cover
       position: absolute
